# dsp-sandbox

./: .clang-format  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  build_pc.sh  build_stm32.sh  compile_commands.json  format.sh  lv_conf.h
.cache/clangd/index/: BasicMathFunctions.c.BC4F5C8B5F678F9B.idx  BasicMathFunctionsF16.c.731CB2D0B7CEE2CA.idx  BayesFunctions.c.B6093FC7948FDC4A.idx  BayesFunctionsF16.c.F8387682334E0761.idx  ComplexMathFunctions.c.872D41EAA949D4A6.idx  ComplexMathFunctionsF16.c.08EB3B800B77737D.idx  ControllerFunctions.c.9B7C5BB15D65D0B5.idx  DistanceFunctions.c.CCE125991EABEB74.idx  DistanceFunctionsF16.c.CA29D90CC184CB25.idx  EVE_commands.c.E9074C7A4BFDDF0D.idx  EVE_supplemental.c.D7C3F3FF77CE15C2.idx  FastMathFunctions.c.FAC61EC57F4AEB0F.idx  FastMathFunctionsF16.c.89C15625F9E3D2B0.idx  FilteringFunctions.c.5E19E46CE119525C.idx  FilteringFunctionsF16.c.3710685E02E029F9.idx  InterpolationFunctions.c.1C8FE4439536D42C.idx  InterpolationFunctionsF16.c.7F03AEB3B7F96137.idx  MatrixFunctions.c.2D720B904351DF9B.idx  MatrixFunctionsF16.c.8E4BE041411DB9F3.idx  QuaternionMathFunctions.c.2B7FD1E161D007E2.idx  SVMFunctions.c.DB5769E7ED7E6256.idx  SVMFunctionsF16.c.261EA7B664CA03DB.idx  StatisticsFunctions.c.9C4AADB599363297.idx  StatisticsFunctionsF16.c.A8187A91557C44B2.idx  SupportFunctions.c.0A7CB0E7BC7E4C9C.idx  SupportFunctionsF16.c.9F5C69ED80553486.idx  TransformFunctions.c.2CA45E1BB44B0DB6.idx  TransformFunctionsF16.c.DFDEDDEEE4785FD7.idx  WindowFunctions.c.8BC868ECB5409362.idx  animimg001.c.0C1925BFC3CCF2DC.idx  animimg002.c.4DB93C379CD03E1D.idx  animimg003.c.9D7A151AEC6EB797.idx  arm_abs_f16.c.C9C92301D49FA9E9.idx  arm_abs_f32.c.6535CEBF0A78B99E.idx  arm_abs_f64.c.6E6B01DD62FFECDC.idx  arm_abs_q15.c.1FA5BA31722835D9.idx  arm_abs_q31.c.B91EC1F2D89A12E3.idx  arm_abs_q7.c.F9AA1CBCE1499E35.idx  arm_absmax_f16.c.F12EB5176384CFE6.idx  arm_absmax_f32.c.D91B85CB3042DA91.idx  (+1964 more)
cmake/: stm32_toolchain.cmake
dsp/: dsp.c  dsp.h
lib/audio/: constants.h  notes.c  notes.h  scales.c  scales.h
lib/dsp/: envelope.c  envelope.h  filter.c  filter.h  oscillator.c  oscillator.h
lib/platform/: audio_driver.h  platform.h  ui_driver.h
lib/scales/: scales.c  scales.h
lib/sequencer/: parameters.c  parameters.h  pattern.c  pattern.h  step.h  synth_state.c  synth_state.h  timing.c  timing.h
lib/synth_state/: synth_state.c  synth_state.h
platform/pc/: CMakeLists.txt  ui_backend.c
platform/stm32/: CMakeLists.txt  ui_backend.c
port/pc/: CMakeLists.txt  audio_callback.c  audio_callback.h  audio_driver.c  audio_driver.h  platform.c  synth_dsp.c  synth_dsp.h  ui_backend.c  ui_backend.h  ui_driver_impl.c
port/stm32/: CMakeLists.txt  audio_callback.c  audio_callback.h  audio_driver.c  audio_driver.h  ui_backend.c  ui_backend.h
port/stm32/chip/: stm32f429.c
src/: main.c
src/ui/: ui.c  ui.h  ui_driver.h
